
[workspace]
resolver = "2"
members = ["live"]


[package]
name = "geometry2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libloading = "0.8.0"
live = {path = "live"}
raylib-ffi = {version = "4.5.5", features = ["dylib"]}
